--- a/config.yml
+++ b/config.yml
@@ -5,12 +5,12 @@ engine:                                   # Engine settings.
   name: "sf-12"                      # Binary name of the engine to use.
   ponder: true                            # Think on opponent's time.
   polyglot:   
-    enabled: false                             # Activate polyglot book.
+    enabled: true                             # Activate polyglot book.
     books: 
-#     white:                             # List of names of books to use as white.
-#       - "Goi5_1.bin"
-#     black:                             # List of names of books to use as black.
-#       - "Goi5_1.bin"
+     white:                             # List of names of books to use as white.
+       - "Goi5_1.bin"
+     black:                             # List of names of books to use as black.
+       - "Goi5_1.bin"
      standard:                           # List of names of books to use if there is no specific book for white, black or chess960.
        - "Goi5_1.bin"  
 #     chess960:                           # List of names of books to use for Chess960.
