--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,10 @@ engine:                                   # Engine settings.
   polyglot:   
     enabled: false                             # Activate polyglot book.
     books: 
-     white:                             # List of names of books to use as white.
-       - "Goi5_1.bin"
-     black:                             # List of names of books to use as black.
-       - "Goi5_1.bin"
+    # white:                             # List of names of books to use as white.
+      # - "Goi5_1.bin"
+   # black:                             # List of names of books to use as black.
+      # - "Goi5_1.bin"
      standard:                           # List of names of books to use if there is no specific book for white, black or chess960.
        - "Goi5_1.bin"  
 #     chess960:                           # List of names of books to use for Chess960.
