--- a/config.yml
+++ b/config.yml
@@ -22,11 +22,11 @@ engine:                                   # Engine settings.
   online_moves:
     chessdb:
       enabled: true                      # Activate online moves from https://chessdb.cn/queryc_en/
-      min_depth: 10                       # Minimum evaluation depth.
+      min_depth: 20                       # Minimum evaluation depth.
       min_time: 40                        # Time the bot must have at least to use the online move.
       timeout: 5                          # Time the server has to respond.
     lichess_cloud:   
-      enabled: false                          # Activate online moves from Lichess cloud eval.
+      enabled: true                          # Activate online moves from Lichess cloud eval.
       min_depth: 10                       # Minimum evaluation depth.
       min_time: 40                        # Time the bot must have at least to use the online move.
       timeout: 5                          # Time the server has to respond.
