--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ engine:                                   # Engine settings.
    # black:                             # List of names of books to use as black.
        - "/path/to/DefaultBook.bin"
      standard:                           # List of names of books to use if there is no specific book for white, black or chess960.
-       - "/path/to/DefaultBook.bin"
+     # - "/path/to/DefaultBook.bin"
 #     chess960:                           # List of names of books to use for Chess960.
 #       - "Chess960Book"
     selection: "weighted_random"          # Move selection is one of "weighted_random", "uniform_random" or "best_move".
