--- a/config.yml
+++ b/config.yml
@@ -8,9 +8,9 @@ engine:                                   # Engine settings.
     enabled: true                             # Activate polyglot book.
     books: 
    # white:                             # List of names of books to use as white.
-       - "/path/to/DefaultBook.bin"
+      # - "/path/to/DefaultBook.bin"
    # black:                             # List of names of books to use as black.
-       - "/path/to/DefaultBook.bin"
+     #  - "/path/to/DefaultBook.bin"
      standard:                           # List of names of books to use if there is no specific book for white, black or chess960.
      # - "/path/to/DefaultBook.bin"
 #     chess960:                           # List of names of books to use for Chess960.
