--- a/config.yml
+++ b/config.yml
@@ -40,11 +40,11 @@ engine:                                   # Engine settings.
     consecutive_moves: 10                 # How many moves in a row the absolute value of the score has to be below the draw value
     min_game_length: 35                   # Earliest move in which draw is offered.
   resign:
-    enabled: false                        # Activate whether the bot should resign games.
+    enabled: true                        # Activate whether the bot should resign games.
     score: -1000                          # If the score is less than or equal to this value, the bot resigns (in cp).
     consecutive_moves: 5                  # How many moves in a row the score has to be below the resign value.
   uci_options:                            # Arbitrary UCI options passed to the engine. (Commenting allowed)
-    Move Overhead: 150                    # Increase if your bot flags games too often.
+    Move Overhead: 250                    # Increase if your bot flags games too often.
     Threads: 4                            # Max CPU threads the engine can use.
     Hash: 256                             # Max memory (in megabytes) the engine can allocate.
 #   SyzygyPath: "/path/to/syzygy"         # Path to your local syzygy endgame tablebases
@@ -53,8 +53,8 @@ move_overhead_multiplier: 1.0             # Increase if your bot flags games too
     
 challenge:                                # Incoming challenges. (Commenting allowed)
   concurrency: 5                          # Number of games to play simultaneously.
-# min_increment: 0                        # Minimum amount of increment to accept a challenge.
-# max_increment: 180                      # Maximum amount of increment to accept a challenge.
+  min_increment: 1                        # Minimum amount of increment to accept a challenge.
+  max_increment: 15                      # Maximum amount of increment to accept a challenge.
 # min_initial: 0                          # Minimum amount of initial time to accept a challenge.
 # max_initial: 315360000                  # Maximum amount of initial time to accept a challenge.
   variants:                               # Chess variants to accept (https://lichess.org/variant).
@@ -80,9 +80,9 @@ challenge:                                # Incoming challenges. (Commenting all
     - casual                              # Unrated games.
     - rated                               # Rated games
 
-matchmaking:
-  initial_time: 15                        # Initial time for matchmaking mode.
-  increment: 0                            # Increment time for matchmaking mode.
+matchmaking: true
+  initial_time: 1                        # Initial time for matchmaking mode.
+  increment: 1                            # Increment time for matchmaking mode.
   rated: true                             # Activate rated games in matchmaking mode.
   timeout: 20                             # Time until a challenge is canceled. 
 # min_rating_diff: 0                      # Minimum rating distance to opponent. (Commenting allowed)
